--- a/_posts/2019-01-18-搭建一个Blog.md
+++ b/_posts/2019-01-18-搭建一个Blog.md
@@ -12,5 +12,45 @@ tag:
 
 
 
-Test.
+# 搭建一个Blog ~~用来写日记~~
 
+## 在本地安装jekyll调试
+
+试了好久，感觉如下几行应该可以解决问题
+
+```shell
+brew install bundler
+bundle check
+bundle update
+bundle install
+```
+
+### 遇到的几种报错
+
+> 首先按jekyll官网的做法试一下
+
+- 少了各种gem依赖的包
+
+这种既然给了Gemfile，那就得用一下，Gemfile里指定了依赖的gem包
+
+以下检查下缺了哪些gem包
+
+```
+bundle check
+```
+
+以下安装上面所说的依赖gem包
+
+```
+bundle install
+```
+
+- 不同版本的各种gem包互相冲突
+
+修改一下它本来给出了Gemfile.lock，因此执行
+
+```
+bundle update
+```
+
+生成了新的Gemfile.lock。
