--- a/_posts/2019-01-18-搭建一个Blog.md
+++ b/_posts/2019-01-18-搭建一个Blog.md
@@ -14,6 +14,16 @@ tag:
 
 # 搭建一个Blog ~~用来写日记~~
 
+## 迁移
+
+先迁移几篇之前在别的博客写的旧文
+
+关于这个模板，使用下载的相关信息全部留在上一篇文中
+
+------
+
+
+
 ## 在本地安装jekyll调试
 
 试了好久，感觉如下几行应该可以解决问题
@@ -35,13 +45,13 @@ bundle install
 
 以下检查下缺了哪些gem包
 
-```
+```shell
 bundle check
 ```
 
 以下安装上面所说的依赖gem包
 
-```
+```shell
 bundle install
 ```
 
@@ -49,8 +59,8 @@ bundle install
 
 修改一下它本来给出了Gemfile.lock，因此执行
 
-```
+```shell
 bundle update
 ```
 
-生成了新的Gemfile.lock。
+生成了新的Gemfile.lock
