--- a/_posts/2019-01-18-搭建一个Blog.md
+++ b/_posts/2019-01-18-搭建一个Blog.md
@@ -18,7 +18,7 @@ tag:
 
 先迁移几篇之前在别的博客写的旧文
 
-关于这个模板，使用下载的相关信息全部留在上一篇文中
+关于这个模板，使用下载的相关信息全部留在 [https://biuy.github.io/halve-theme/](https://biuy.github.io/halve-theme/)
 
 ------
 
