--- a/_posts/2019-01-25-Anroid搭建第一个应用.md
+++ b/_posts/2019-01-25-Anroid搭建第一个应用.md
@@ -2,10 +2,9 @@
 layout: post
 title:  "Anroid搭建第一个应用"
 date:   2019-01-26
-excerpt: "阅读Android Studio开发者文档笔记"
+excerpt: "Android Studio开发者文档"
 image: https://ws1.sinaimg.cn/large/006tNc79gy1fzk5ar8nk5j31hc0u00yk.jpg
 tag:
-- web
 - android
 - 笔记
 ---
